# better-cstr

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: tests.rs
tests/compile_fail/: invalid_lit_bool.rs  invalid_lit_bool.stderr  invalid_lit_byte_str_with_null_bytes.rs  invalid_lit_byte_str_with_null_bytes.stderr  invalid_lit_char.rs  invalid_lit_char.stderr  invalid_lit_float.rs  invalid_lit_float.stderr  invalid_lit_number.rs  invalid_lit_number.stderr  invalid_lit_str_with_null_bytes.rs  invalid_lit_str_with_null_bytes.stderr  invalid_non_lit.rs  invalid_non_lit.stderr
