[package]
name = "better_cstr"
description = "A better macro to work with C strings"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

repository = "https://github.com/iulian-rusu/better-cstr"

keywords = ["cstr", "const", "string", "literal", "macro"]
categories = ["development-tools::ffi"]

[dependencies]
quote = "1.0.40"
litrs = "0.4.1"
proc-macro2 = "1.0.94"

[lib]
proc-macro = true