[package]
name = "better_cstr"
description = "A better macro for working with C strings"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"

repository = "https://github.com/iulian-rusu/better-cstr"

keywords = ["cstr", "string", "literal", "macro"]
categories = ["development-tools::ffi"]

[dependencies]
quote = "1.0.40"
syn = "2.0.100"

[dev-dependencies]
trybuild = "1.0.104"

[lib]
proc-macro = true